# humanizer-bench

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  run.py
.github/workflows/: ci.yml
docs/: .gitkeep
examples/: quickstart.md
humanizer_bench/: __init__.py  cli.py  registry.py  runner.py
humanizer_bench/attacks/: __init__.py  back_translation.py  base.py  noise.py  sentence_merge.py
humanizer_bench/data/: __init__.py  toy.jsonl
humanizer_bench/datasets/: __init__.py  base.py  loaders.py  toy.py
humanizer_bench/detectors/: __init__.py  base.py  heuristic.py  perplexity.py
humanizer_bench/metrics/: __init__.py  core.py
tests/: test_attacks.py  test_cli.py  test_datasets.py  test_detectors.py  test_metrics.py  test_registry.py  test_runner.py
